--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vanity-key",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Generate vanity prefixes for Bitcoin public key addresses",
   "main": "index.js",
   "bin": {
@@ -13,7 +13,14 @@
     "type": "git",
     "url": "https://github.com/eugeneware/vanity-key"
   },
-  "keywords": ["bitcoin","bitcoinjs","vanity","generator","crypto","cryptocurrency"],
+  "keywords": [
+    "bitcoin",
+    "bitcoinjs",
+    "vanity",
+    "generator",
+    "crypto",
+    "cryptocurrency"
+  ],
   "author": "Eugene Ware <eugene@noblesamurai.com>",
   "license": "BSD-3-Clause",
   "bugs": {
